--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.16.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-strap": "0.0.1",
+    "reactstrap": "^8.3.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
