Configuration of prod build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "help-desk",
-  "homepage" : "http://kylehagemann.github.io/help-desk",
+  "homepage" : "https://kylehagemann.github.io/help-desk",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,7 +36,7 @@
     "test:coverage": "jest --verbose --coverage",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
